2010-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (ns_set_default_prefs): Delete function.
	(syms_of_nsterm): Initialize ns_command_modifier,
	ns_control_modifier, ns_function_modifier, ns_antialias_text, and
	ns_antialias_threshold here, not in ns_term_init (Bug#4113).

	* xdisp.c (pos_visible_p): Check for invisible text at the correct
	position (Bug#4040).

2010-01-09  Eli Zaretskii  <eliz@gnu.org>

	* editfns.c (Ffloat_time): Doc fix.

2010-01-09  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Fx_create_frame): Don't create frame larger than display
	by default bug#3643.

2010-01-09  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.h (FRAME_TOP_MARGIN_HEIGHT): New macro.
	(FRAME_LINE_TO_PIXEL_Y, FRAME_PIXEL_Y_TO_LINE): Take account of pseudo
	windows above internal border.

	* window.h (WINDOW_MENU_BAR_P, WINDOW_TOOL_BAR_P): New macros.
	(WINDOW_TOP_EDGE_Y, WINDOW_BOTTOM_EDGE_Y): Take account of pseudo
	windows above internal border.

	* xdisp.c (get_glyph_string_clip_rects, init_glyph_string): Don't treat
	tool bar windows specially.

	* xfns.c (x_set_tool_bar_lines): Take account of menu bar height.

	* xterm.c (x_after_update_window_line): Don't treat tool bar windows
	specially.
	(XTflash): Take account of menu bar height.

	* w32term.c (x_after_update_window_line): Don't treat tool bar windows
	specially.

2010-01-08  Jan Djärv  <jan.h.d@swipnet.se>

	* dispnew.c (change_frame_size_1): newwidth == FRAME_COLS  (f) must
	also be true before we can return early (bug #5339).

2010-01-06  David Reitter  <david.reitter@gmail.com>

	* nsfns.m (ns_get_screen): Rewrite, returning NULL for non-NS.
	(Fns_display_usable_bounds): Rewrite, computing bounds properly
	(Bug#3233).

2010-01-06  Jan Djärv  <jan.h.d@swipnet.se>

	* font.c (font_open_entity): Enable chache and call cached_font_ok
	for the driver if defined.
	(QCuser_spec): New symbol.
	(font_spec_from_name): Save name as user-spec.
	(font_load_for_lface): Keep user-spec instead of name.